<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_history"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ankurbhadauria.guardianproject.History">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="10"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/str5"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="20dp"
            android:typeface="sans"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="4"
            android:orientation="horizontal">


            <TextView
                android:gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:text="@string/str6"
                android:textColor="#000000"
                android:textSize="17dp"
                />

            <TextView
                android:gravity="right|center_vertical"
                android:id="@+id/date_tv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:textColor="#000000"
                android:textSize="18dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="4"
            android:orientation="horizontal">


            <TextView
                android:gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:text="@string/str7"
                android:textColor="#000000"
                android:textSize="17dp"
                />

            <TextView
                android:gravity="right|center_vertical"
                android:id="@+id/time_tv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:textColor="#000000"
                android:textSize="18dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="4"
            android:orientation="horizontal">


            <TextView
                android:gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:text="@string/str8"
                android:textColor="#000000"
                android:textSize="17dp"
                />

            <TextView
                android:gravity="right|center_vertical"
                android:id="@+id/duration_tv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:textColor="#000000"
                android:textSize="18dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="4"
            android:orientation="horizontal">


            <TextView
                android:gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:text="@string/str9"
                android:textColor="#000000"
                android:textSize="17dp"
                />

            <TextView
                android:gravity="right|center_vertical"
                android:id="@+id/distance_tv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:textColor="#000000"
                android:textSize="18dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="4"
            android:orientation="horizontal">


            <TextView
                android:gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:text="@string/str10"
                android:textColor="#000000"
                android:textSize="17dp"
                />

            <TextView
                android:gravity="right|center_vertical"
                android:id="@+id/calories_burned_tv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:textColor="#000000"
                android:textSize="18dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="4"
            android:orientation="horizontal">


            <TextView
                android:gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:text="@string/str11"
                android:textColor="#000000"
                android:textSize="17dp"
                />

            <TextView
                android:gravity="right|center_vertical"
                android:id="@+id/steps_tv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:textColor="#000000"
                android:textSize="18dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="4"
            android:orientation="horizontal">


            <TextView
                android:gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:text="@string/str12"
                android:textColor="#000000"
                android:textSize="17dp"
                />

            <TextView
                android:gravity="right|center_vertical"
                android:id="@+id/goal_tv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:textColor="#000000"
                android:textSize="18dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="4"
            android:orientation="horizontal">


            <TextView
                android:gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:text="@string/str13"
                android:textColor="#000000"
                android:textSize="17dp"
                />

            <TextView
                android:gravity="right|center_vertical"
                android:id="@+id/goal_achieved__tv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:textColor="#000000"
                android:textSize="18dp"
                />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
