<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.ankurbhadauria.guardianproject.Pedometer">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin"
            android:layout_below="@+id/lock_fb"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="22dp"
            android:src="@drawable/ic_pause_circle_outline_black_24dp"
            android:visibility="invisible"
            app:fabSize="mini"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/lock_fb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="22dp"
            android:src="@drawable/ic_lock_outline_black_24dp"
            app:fabSize="mini"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/unlock_fb"
            android:layout_alignParentStart="true"
            android:layout_marginStart="12dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin"
            android:src="@drawable/ic_play_circle_outline_black_24dp"
            android:visibility="invisible"
            app:fabSize="mini"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/unlock_fb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin"
            android:src="@drawable/ic_lock_open_black_24dp"
            app:fabSize="mini"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#F5F5F5"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.06"
            android:weightSum="3"
            android:orientation="horizontal">

            <TextView
                android:text="Calories"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <TextView
                android:text="Time"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <TextView
                android:text="Distance"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.09"
            android:weightSum="3"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/calories"
                android:textColor="#000000"
                android:text="@string/str4"
                android:layout_margin="2dp"
                android:background="#ffffff"
                android:textSize="22dp"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <Chronometer
                android:id="@+id/time_count"
                android:layout_width="0dp"
                android:background="#ffffff"
                android:layout_height="match_parent"
                android:textSize="22dp"
                android:layout_margin="2dp"
                android:gravity="center"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/distance"
                android:textColor="#000000"
                android:text="@string/str2"
                android:textSize="22dp"
                android:background="#ffffff"
                android:layout_margin="2dp"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="vertical">
            <TextView
                android:id="@+id/steps"
                android:textColor="#000000"
                android:layout_marginTop="40dp"
                android:text="@string/str1"
                android:gravity="center"
                android:textSize="22dp"
                android:layout_gravity="center"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:background="@drawable/circle"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/goal_steps"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:text="@string/str3"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.02"/>
        <Button
            android:id="@+id/start_stop"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.13"
            android:text="Start"
            android:backgroundTint="#fcd054"
            android:gravity="center"/>
    </LinearLayout>
    </RelativeLayout>
</FrameLayout>
